# EventBus

./: Cargo.toml
examples/: normal.rs  simple.rs  simple_test.rs  simples.rs
for-event-bus/: Cargo.toml
for-event-bus-derive/: Cargo.toml
for-event-bus-derive/examples/: dev.rs  dev_1.rs  try_resolve.rs  try_resolve_worker.rs
for-event-bus-derive/src/: lib.rs
for-event-bus/examples/: merge_event.rs  merge_event_with_derive.rs  normal.rs  single_event.rs
for-event-bus/src/: lib.rs
for-event-bus/src/bus/: mod.rs  sub_bus.rs
for-event-bus/src/worker/: mod.rs
for-event-bus/src/worker/identity/: merge.rs  mod.rs  simple.rs
src/: event_bus.rs  lib.rs  sub_bus.rs  worker.rs
src/bus/: mod.rs  sub_bus.rs
src/worker/identity/: merge.rs  mod.rs  simple.rs
