[package]
name = "event-bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.26.0", features = ["full"]}
log = "0.4.17"
anyhow = "1.0.69"


[dev-dependencies]
custom-utils = "0.10.12"
