[package]
name = "for-event-bus-derive"
version = "0.1.3"
edition = "2021"
description = "a derive crate for for-event-bus"
repository = "https://github.com/jm-observer/for_event_bus"

license-file = "../LICENSE"
readme = "../README.md"

include = [
    "Cargo.toml", "README.md", "src/lib.rs"
]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"]}


[dev-dependencies]
custom-utils = {version = "0.10.14", features = ["derive"]}
tokio = {version = "1.27.0", features = ["full"]}
prettyplease = "0.2.4"