[package]
name = "for_event_bus"
version = "0.1.4"
edition = "2021"
description = "a event bus"
repository = "https://github.com/jm-observer/for_event_bus"

license-file = "../LICENSE"
readme = "../README.md"

include = [
    "../LICENSE", "Cargo.toml", "README.md", "src/**/*.rs"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.26.0", features = ["sync", "rt"]}
log = "0.4.17"
for-event-bus-derive = "0.1.1"

[dev-dependencies]
custom-utils = { version = "0.10.14"}
tokio = {version="1.26.0", features = ["full"]}



